# ai-usagebar

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.example.toml
.serena/: project.yml
docs/superpowers/plans/: 2026-07-10-antigravity-vendor.md
docs/superpowers/specs/: 2026-07-10-antigravity-vendor-design.md
gnome-extension/: README.md  extension.js  install.sh  metadata.json  prefs.js  stylesheet.css
gnome-extension/schemas/: org.gnome.shell.extensions.ai-usagebar.gschema.xml
macos/: ai-usagebar-menubar  ai-usagebar-menubar.swift
packaging/aur/: .SRCINFO  .SRCINFO-bin  PKGBUILD  PKGBUILD-bin
src/: active.rs  cache.rs  config.rs  lib.rs  theme.rs  usage.rs  vendor.rs
src/anthropic/: creds.rs  fetch.rs  types.rs
src/antigravity/: fetch.rs  mod.rs  types.rs  vendor.rs
src/deepseek/: vendor.rs
src/openai/: vendor.rs
src/opencode/: fetch.rs  mod.rs  types.rs  vendor.rs
src/openrouter/: vendor.rs
src/tui/: app.rs  mod.rs  panels.rs  settings.rs  style.rs  view.rs
src/widget/: cli.rs  render.rs  run.rs
src/zai/: vendor.rs
tests/: anthropic_e2e.rs  antigravity_e2e.rs  live.rs  opencode_e2e.rs
tests/snapshots/: antigravity_e2e__antigravity_full_bar_text.snap  antigravity_e2e__antigravity_full_tooltip.snap  opencode_e2e__opencode_full_bar_text.snap  opencode_e2e__opencode_full_tooltip.snap
