[package]
name = "ai-usagebar"
version = "0.11.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
description = "Waybar widget + TUI for AI plan usage across Anthropic, OpenAI, Z.AI, OpenRouter, and DeepSeek"
readme = "README.md"
repository = "https://github.com/akitaonrails/ai-usagebar"
homepage = "https://github.com/akitaonrails/ai-usagebar"
documentation = "https://github.com/akitaonrails/ai-usagebar#readme"
keywords = ["waybar", "claude", "openai", "tui", "usage"]
categories = ["command-line-utilities"]

# Don't ship screenshots (~6 MiB of the package!) or AUR packaging files
# in the crates.io tarball — they're for the GitHub README and AUR builds,
# not for consumers of the crate or its binaries.
exclude = [
    "screenshot.png",
    "screenshots/*",
    "packaging/*",
    ".github/*",
    ".claude/*",
]

# cargo-binstall metadata: tells `cargo binstall ai-usagebar` how to find the
# prebuilt binaries already published in each GitHub Release, so users without
# rustup don't need to compile from source.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/ai-usagebar-linux-{ target-arch }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[lib]
name = "ai_usagebar"
path = "src/lib.rs"

[[bin]]
name = "ai-usagebar"
path = "src/bin/ai-usagebar.rs"

[[bin]]
name = "ai-usagebar-tui"
path = "src/bin/ai-usagebar-tui.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "time", "fs", "process", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
fs2 = "0.4"
tempfile = "3"
directories = "5"
thiserror = "2"
base64 = "0.22"
ratatui = "0.30.1"
ratatui-bubbletea-components = "0.1"
ratatui-bubbletea-theme = "0.1"

[dev-dependencies]
mockito = "1"
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
